--- a/styles.css
+++ b/styles.css
@@ -1118,7 +1118,7 @@ section:not(.hero) {
     min-height: 280px;
     background-size: cover;
     background-position: center;
-    border-radius: 1rem;
+    border-radius: .4rem;
     box-shadow: var(--shadow-md);
     position: relative;
     overflow: hidden;
